k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: planningtool
  namespace: stage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: planningtool
  type: ClusterIP
